--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="certificate-container" id="certificate">
-    <img src="certificate-template.png" class="certificate-bg" alt="شهادة التخرج">
+    <img src="template/certificate-template.png" class="certificate-bg" alt="شهادة التخرج">
     <div class="name" id="name">الاسم هنا</div>
   </div>
 
