--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
   <button id="downloadBtn">تحميل الشهادة</button>
 
   <script src="script.js"></script>
+  <script>
+  window.onload = function () {
+    const downloadButton = document.getElementById('downloadBtn');
+    if (downloadButton) {
+      downloadButton.click();
+    }
+  };
+</script>
 </body>
 </html>
