--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
   <div class="certificate-container" id="certificate">
-    <img src="certificate-template.jpg" class="certificate-bg" alt="شهادة التخرج">
+    <img src="certificate-template.png" class="certificate-bg" alt="شهادة التخرج">
     <div class="name" id="name">الاسم هنا</div>
   </div>
 
   <button id="downloadBtn">تحميل الشهادة</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
