--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <button class="download-btn" id="downloadBtn">📥 تحميل الشهادة</button>
 
 <div class="certificate-container" id="certificate">
-  <img class="certificate-image" src="Graduation Certificate.png" alt="Certificate">
+  <img class="certificate-image" src="certificate-template.jpg" alt="Certificate">
   <div class="name-overlay" id="name"></div>
 </div>
 
