--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
     .name-overlay {
       position: absolute;
-      top: 42%; /* Adjust vertically */
+      top: 50%; /* Adjust vertically */
       left: 50%;
       transform: translate(-50%, -50%);
       font-size: 2.5vw; /* responsive font */
@@ -61,6 +61,12 @@
   const name = params.get('name') || 'الاسم';
   document.getElementById('name').textContent = name;
 
+  document.getElementById("downloadBtn").addEventListener("click", () => {
+    html2canvas(document.getElementById("certificate")).then(canvas => {
+      const link = document.createElement('a');
+      link.download = `شهادة - ${name}.png`;
+      link.href = canvas.toDataURL();
+      
 </script>
 
 </body>
