--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 
 <button class="download-btn" id="downloadBtn">📥 تحميل الشهادة</button>
 
+  <div style="text-align:center; margin-top:20px;">
+  <button onclick="increaseFont()">➕ تكبير الخط</button>
+  <button onclick="decreaseFont()">➖ تصغير الخط</button>
+</div>
+
 <div class="certificate-container" id="certificate">
   <img class="certificate-image" src="certificate-template.jpg" alt="Certificate">
   <div class="name-overlay" id="name"></div>
@@ -73,6 +78,7 @@
 
 </body>
 </html>
+
 
 
 
